improved match parse