@@ -14,8 +14,11 @@ import org.openqa.selenium.WebElement;
 
 import java.io.*;
 import java.net.MalformedURLException;
+import java.time.Instant;
+import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Date;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
@@ -99,11 +102,27 @@ public class Helper {
         return player;
     }
 
+    public static void write(List<MatchDetails> matches){
+
+
+        try {
+            FileOutputStream f = new FileOutputStream(new File(LocalDate.now() +".txt"));
+            ObjectOutputStream o = new ObjectOutputStream(f);
+            o.writeObject(matches);
+            o.close();
+            f.close();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+
+
+
+    }
     public static void write(MatchDetails match){
 
 
         try {
-            FileOutputStream f = new FileOutputStream(new File(match.getFirst().toString()+"-"+match.getSecond().toString()+".txt"));
+            FileOutputStream f = new FileOutputStream(new File(match.getTeams().get(0)+"-"+match.getTeams().get(1)+LocalDate.now()+".txt"));
             ObjectOutputStream o = new ObjectOutputStream(f);
             o.writeObject(match);
             o.close();
@@ -115,16 +134,28 @@ public class Helper {
 
 
     }
+    public static List<MatchDetails> read(String match) {
+        try {
+            FileInputStream fi = new FileInputStream(new File(match));
+            ObjectInputStream oi = new ObjectInputStream(fi);
+            List<MatchDetails> matches = (List<MatchDetails>) oi.readObject();
+            return matches;
 
+        } catch (IOException e) {
+            return null;
+        } catch (ClassNotFoundException e) {
+            throw new RuntimeException(e);
+        }
+    }
     public static MatchDetails read(MatchDetails match){
         try {
-            FileInputStream fi = new FileInputStream(new File(match.getFirst().toString()+"-"+match.getSecond().toString()+".txt"));
+            FileInputStream fi = new FileInputStream(new File(match.getTeams().get(0)+"-"+match.getTeams().get(1)+LocalDate.now()+".txt"));
             ObjectInputStream oi = new ObjectInputStream(fi);
             match = (MatchDetails) oi.readObject();
             return match;
 
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            return null;
         } catch (ClassNotFoundException e) {
             throw new RuntimeException(e);
         }
